Fixed regression where annotations weren't collapsing correctly.

--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -466,11 +466,13 @@ h6 {
 
     ol {
       list-style-type: decimal;
+      list-style-position:inside;
       padding-left: 1.5em;
     }
 
     ul {
       list-style-type: disc;
+      list-style-position:inside;
       padding-left: 1.5em;
     }
 
